user deletes its own pending Asset Request
