# src/main/java/org/cdpg/dx/acl/accessRequest/service/AccessRequestService.java
@@ -26,5 +26,7 @@ public interface AccessRequestService {
 
   Future<PaginatedResult<AccessRequestDto>> listAccessRequestForProvider(PaginatedRequest paginatedRequest);
 
+  Future<Boolean> deleteAccessRequestForConsumer(UUID consumerId, UUID requestId);
+
 
 }
